# teiko_technical_stp

./: app.py  cell_count.db  create_db.py  delete_samples.py  explore.py  part_2.py  part_3.py  pyproject.toml  readme.md  requirements.txt
.streamlit/: secrets.toml
db_manager/: db_deletion.py  db_helpers.py  db_initiation.py  db_insertion.py
exploration_files/: explore.py  part_3_4.py
teiko_technical/: data_overview.py  statistical_analysis.py
