[tool.poetry]
name = "teiko-technical-stp"
version = "0.1.0"
description = ""
authors = ["Spencer Peterson <spencer9696@gmail.com>"]
readme = "README.md"
packages = [{include = "teiko_technical_stp"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
numpy = "^2.3.0"
plotly = "^6.1.2"
pandas = "^2.3.0"
tqdm = "^4.67.1"
scipy = "^1.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
